# zsample-app

./: README.md  west.yml  zbuild.sh
.github/workflows/: mars_5_build.yml  mars_81_build.yml  mars_82_build.yml
app/: CMakeLists.txt  Kconfig  testcase.yaml
app/boards/mars_5/: i3cs.overlay  spi.overlay
app/boards/mars_81/: base.overlay  spi.conf  spi.overlay
app/boards/mars_82/: spi.overlay
app/spi_test/: Kconfig  spi_test.c  spi_test.h
app/src/: main.c
drivers/: CMakeLists.txt  Kconfig
drivers/col_gpio_drive/: CMakeLists.txt  Kconfig  col_gpio_drive.c
drivers/hwinfo/: CMakeLists.txt  Kconfig  hwinfo_ite.c  hwinfo_mars_5.c
lib/: CMakeLists.txt
tests/: CMakeLists.txt  main.c
zephyr/: CMakeLists.txt  Kconfig
zephyr/common/: CMakeLists.txt  Kconfig  main.c
zephyr/common/keycode_detect/: CMakeLists.txt  Kconfig  keycode_detect.c
zephyr/common/system_event_log/: Kconfig  system_event_log.c  system_event_log.h  system_event_log_shell.c  system_event_table.h
zephyr/common/system_info/: Kconfig  system_info.c  system_info.h
zpatch/: 0001-drivers-i3c-add-it51xxx-i3cs-driver.patch  0002-driver-spi-it51xxx-enable-spi-clock-only-when-spi-transaction.patch  0002-drivers-i3c-add-it51xxx-i3cm-driver.patch  0002-drivers-spi-add-it51xxx-spi-driver.patch  0003-drivers-i3c-shell-enable-i3c-shell-support-for-it51x.patch  0003-dts-ite-it51xxx-set-high-level-triggered-mode-for-spi0-node.patch  0004-driver-spi-it8xxx2-support-dual-and-quad-modes.patch  0004-drivers-spi-it51xxx-move-interrupt-flags-check-to-compile-time.patch  apply-patches.sh
(+63 files in other folders)
